# pyterion

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: CI.yml
pyterion/: __init__.py
src/: lib.rs
tests/: test_decorator.py
