[build-system]
requires = ["maturin>=0.12,<0.13", "setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "pyterion"
version = "0.0.1"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tools.setuptools]
packages = ["pyterion"]
